<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>add_two_values</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="katayama.ryosuke@sec.co.jp">katayama</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
<!-- ここまで自動生成 -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

<!-- ここから自動生成 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
